Fix odd alignment in mobile nav

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,9 +22,9 @@
 
 .heroContent {
     position: absolute;
-    top: 80%;
+    bottom: 5%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
     width: 100%;
 }
 
